# prompt_breeder

./: .pre-commit-config.yaml  README.md  pyproject.toml
experiments/gsm8k/: define_experiment.py  examples_provider.py  fitness.py  main.py
experiments/gsm8k/tests/: test_fitness.py
prompt_breeder/: types.py
prompt_breeder/data/: __init__.py  base_mutation_prompts.json  base_thinking_styles.json
prompt_breeder/evolution/: base.py  binary_tournament.py  fitness.py
prompt_breeder/evolution/callbacks/: __init__.py  save_population.py  task_fitness_summary.py  tensorboard.py  unit_fitness_distribution.py
prompt_breeder/evolution/initialization/: base.py
prompt_breeder/mutators/: base.py  crossover.py  eda_rank_and_index_mutation.py  elite.py  estimation_of_distribution_mutation.py  first_order_hypermutation.py  first_order_prompt_generation.py  lineage_based_mutation.py  reinit.py  working_out_to_task.py  zero_order_hypermutation.py  zero_order_prompt_generation.py
prompt_breeder/prompts/: string.py
prompt_breeder/provider/: json_file.py
tests/evolution/: test_binary_tournament.py
tests/evolution/callbacks/: test_save_population.py  (+2 more)
tests/mutators/: test_crossover.py  test_eda_rank_and_index_mutation.py  test_elite.py  test_estimation_of_distribution_mutation.py  test_first_order_hypermutation.py  test_first_order_prompt_generation.py  test_lineage_based_mutation.py  test_reinit.py  test_shuffling.py  test_working_out_to_task.py  test_zero_order_hypermutation.py  test_zero_order_prompt_generation.py
tests/provider/: test_json_file.py
(+1 files in other folders)
