[tool.poetry]
name = "prompt-breeder"
version = "0.1.0"
description = ""
authors = ["ddiaz"]
readme = "README.md"
packages = [{include = "prompt_breeder"}]
include = ["prompt_breeder/data/*.json"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.340"
tqdm = "^4.66.1"
types-tqdm = "^4.66.0.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pytest-cov = "^4.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[tool.poetry.group.experiments.dependencies]
datasets = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

